--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.12.0",
     "mitt": "^3.0.0",
     "naive-ui": "^2.28.0",
     "sass": "^1.50.0",
+    "vicons": "^0.0.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
