--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vicons/ionicons5": "^0.12.0",
+    "axios": "^0.26.1",
     "mitt": "^3.0.0",
     "naive-ui": "^2.28.0",
     "sass": "^1.50.0",
