--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "mitt": "^3.0.0",
     "naive-ui": "^2.28.0",
+    "pinia": "^2.0.0-rc.10",
     "sass": "^1.50.0",
     "vicons": "^0.0.1",
     "vue": "^3.2.25",
