--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vicons/ionicons5": "^0.12.0",
     "axios": "^0.26.1",
+    "easy-async-storage": "^1.0.19",
     "mitt": "^3.0.0",
     "naive-ui": "^2.28.0",
     "pinia": "^2.0.0-rc.10",
