--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "easy-async-storage": "^1.0.19",
     "mitt": "^3.0.0",
     "naive-ui": "^2.30.4",
+    "pinia": "^2.0.14",
     "sass": "^1.50.0",
     "vicons": "^0.0.1",
     "vue": "^3.2.25",
