--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "pinia": "^2.1.3",
+    "sass": "^1.62.1",
+    "vue": "^3.2.25",
+    "vue-router": "^4.2.1"
   },
   "devDependencies": {
+    "@types/node": "^20.2.1",
     "@vitejs/plugin-vue": "^2.3.4",
+    "naive-ui": "^2.34.3",
     "typescript": "^4.5.4",
     "vite": "^2.9.15",
     "vue-tsc": "^0.34.7"
