--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
     "sass": "^1.62.1",
+    "vfonts": "^0.0.3",
     "vue": "^3.2.25",
     "vue-router": "^4.2.1"
   },
@@ -18,6 +21,7 @@
     "@vitejs/plugin-vue": "^2.3.4",
     "naive-ui": "^2.34.3",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.16.2",
     "vite": "^2.9.15",
     "vue-tsc": "^0.34.7"
   }
