--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "jsencrypt": "^3.3.2",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
     "sass": "^1.62.1",
@@ -22,7 +23,7 @@
     "naive-ui": "^2.34.3",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.16.2",
-    "vite": "^2.9.15",
+    "vite": "2.9.16",
     "vue-tsc": "^0.34.7"
   }
 }
