--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.2.1",
     "@vitejs/plugin-vue": "^2.3.4",
     "naive-ui": "^2.34.3",
+    "prettier": "3.0.3",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.16.2",
     "vite": "2.9.16",
