--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.1",
-    "@vitejs/plugin-vue": "^2.3.4",
+    "@vitejs/plugin-vue": "^4.4.0",
     "naive-ui": "^2.34.3",
     "prettier": "3.0.3",
-    "typescript": "^4.5.4",
+    "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.16.2",
-    "vite": "2.9.16",
-    "vue-tsc": "^0.34.7"
+    "vite": "^4.5.0",
+    "vue-tsc": "^1.8.22"
   }
 }
